--- a/.github/workflows/python-publish-pypi.yml
+++ b/.github/workflows/python-publish-pypi.yml
@@ -16,32 +16,49 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  build:
+    name: Build distribution
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
-    
+      
     - name: Install dependencies
       run: |
-        # Upgrade pip
         python3 -m pip install --upgrade pip
-        # Install build deps
-        python3 -m pip install setuptools wheel twine
-        # If requirements.txt exists, install from it
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        # Install the package from setup.py
-        python3 setup.py install
-        
-    - name: Build and Upload to PyPI
+        python3 -m pip install pyyaml --user
+    
+    - name: Install pypa/build
       run: |
-        python3 setup.py sdist bdist_wheel
-        python3 -m twine upload dist/*
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        python3 -m pip install build setuptools==65.5.1 --user
+        
+    - name: Build a binary wheel and a source tarball
+      run: python3 -m build
+    - name: Store the distribution packages
+      uses: actions/upload-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+
+  publish-to-pypi:
+    name: >-
+      Publish Python 🐍 distribution 📦 to PyPI
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
+    steps:
+    - name: Download all the dists
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+    - name: Publish distribution 📦 to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
